[gd_scene load_steps=24 format=3 uid="uid://dwv5aj4teuxtg"]

[ext_resource type="Texture2D" uid="uid://furp6nxqx8l0" path="res://assets/images/pig.png" id="1_24irw"]
[ext_resource type="Script" path="res://scenes/components/objects/mob.gd" id="1_slukd"]
[ext_resource type="Script" path="res://scripts/nodes/reflection2d.gd" id="2_kwf7w"]
[ext_resource type="Script" path="res://scripts/interactable.gd" id="4_5xflt"]
[ext_resource type="AudioStream" uid="uid://bx38om1aavfe" path="res://assets/sounds/mobs/pig/pig-1.wav" id="4_l7hg0"]
[ext_resource type="AudioStream" uid="uid://qaqqyfgou86k" path="res://assets/sounds/mobs/pig/pig-2.wav" id="5_7yhrj"]
[ext_resource type="Script" path="res://scripts/health_manager.gd" id="7_eyx1h"]
[ext_resource type="AudioStream" uid="uid://hg6jkfvvlvod" path="res://assets/sounds/mobs/pig/pig-4.wav" id="7_l63a7"]
[ext_resource type="Script" path="res://scripts/damage_sounds.gd" id="8_4reme"]
[ext_resource type="Script" path="res://scripts/damage_effect.gd" id="10_d8vsq"]
[ext_resource type="PackedScene" uid="uid://52ogfp0xj6gt" path="res://scenes/components/effects/bacon.tscn" id="11_ct0dh"]
[ext_resource type="Script" path="res://scripts/item_drops.gd" id="12_fwqqi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_0np5g"]
radius = 20.0
height = 77.0

[sub_resource type="Animation" id="Animation_l3d7v"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0872665]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -14)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Texture:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_8khft"]
resource_name = "walk"
length = 0.4
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0872665, -0.0872665]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1d2hl"]
_data = {
"RESET": SubResource("Animation_l3d7v"),
"walk": SubResource("Animation_8khft")
}

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_mvc02"]
random_pitch = 2.0
streams_count = 3
stream_0/stream = ExtResource("4_l7hg0")
stream_1/stream = ExtResource("5_7yhrj")
stream_2/stream = ExtResource("7_l63a7")

[sub_resource type="Animation" id="Animation_ux0hg"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_facy3"]
resource_name = "dmg"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0.4, 0.4, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0exnc"]
_data = {
"RESET": SubResource("Animation_ux0hg"),
"dmg": SubResource("Animation_facy3")
}

[sub_resource type="Animation" id="Animation_8a3f8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -332)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1e-05, 1e-05)]
}

[sub_resource type="Animation" id="Animation_eopp7"]
resource_name = "fall"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Texture:position")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.0111111, 0.0222222, 0.0333333, 0.0444444, 0.0555556, 0.0666667, 0.0777778, 0.0888889, 0.1, 0.111111, 0.122222, 0.133333, 0.144444, 0.155556, 0.166667, 0.177778, 0.188889, 0.2, 0.211111, 0.222222, 0.233333, 0.244444, 0.255556, 0.266667, 0.277778, 0.288889, 0.3, 0.311111, 0.322222, 0.333333, 0.344444, 0.355556, 0.366667, 0.377778, 0.388889, 0.4, 0.411111, 0.422222, 0.433333, 0.444444, 0.455556, 0.466667, 0.477778, 0.488889, 0.5),
"transitions": PackedFloat32Array(1.8, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1.8),
"update": 0,
"values": [Vector2(0, -132), Vector2(0, -131.945), Vector2(0, -131.896), Vector2(0, -131.872), Vector2(0, -131.909), Vector2(0, -132.036), Vector2(0, -132.247), Vector2(0, -132.48), Vector2(0, -132.606), Vector2(0, -132.453), Vector2(0, -131.881), Vector2(0, -130.897), Vector2(0, -129.778), Vector2(0, -129.123), Vector2(0, -129.745), Vector2(0, -132.335), Vector2(0, -136.916), Vector2(0, -142.265), Vector2(0, -145.626), Vector2(0, -143.16), Vector2(0, -131.479), Vector2(0, -110.181), Vector2(0, -84.6541), Vector2(0, -63.3459), Vector2(0, -37.8188), Vector2(0, -16.5206), Vector2(0, -4.83975), Vector2(0, -2.37447), Vector2(0, -5.73473), Vector2(0, -11.084), Vector2(0, -15.6654), Vector2(0, -18.2547), Vector2(0, -18.8767), Vector2(0, -18.2221), Vector2(0, -17.1034), Vector2(0, -16.1194), Vector2(0, -15.5469), Vector2(0, -15.3937), Vector2(0, -15.5198), Vector2(0, -15.7532), Vector2(0, -15.9642), Vector2(0, -16.0905), Vector2(0, -16.1275), Vector2(0, -16.1036), Vector2(0, -16.055), Vector2(0, -16)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Texture:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_oihn5"]
_data = {
"RESET": SubResource("Animation_8a3f8"),
"fall": SubResource("Animation_eopp7")
}

[node name="Mob" type="CharacterBody2D" groups=["objects"]]
collision_mask = 0
input_pickable = true
motion_mode = 1
script = ExtResource("1_slukd")

[node name="Texture" type="Sprite2D" parent="."]
visibility_layer = 2
position = Vector2(0, -332)
rotation = 0.0872665
scale = Vector2(1e-05, 1e-05)
texture = ExtResource("1_24irw")

[node name="Reflection2D" type="Node2D" parent="." node_paths=PackedStringArray("reflection_sprite")]
script = ExtResource("2_kwf7w")
reflection_sprite = NodePath("../Texture")

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="."]
path_postprocessing = 1
avoidance_enabled = true
radius = 40.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0.5, -11)
rotation = 1.57079
shape = SubResource("CapsuleShape2D_0np5g")
script = ExtResource("4_5xflt")

[node name="Timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true
autostart = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_1d2hl")
}
autoplay = "walk"

[node name="OinkSound" type="AudioStreamPlayer2D" parent="."]
stream = SubResource("AudioStreamRandomizer_mvc02")
volume_db = 12.0
max_distance = 500.0

[node name="MiscSoundTimer" type="Timer" parent="."]
one_shot = true
autostart = true

[node name="HealthManager" type="Node2D" parent="." groups=["health_manager"]]
script = ExtResource("7_eyx1h")
max_health = 3
health = 3

[node name="HealthSounds" type="Node2D" parent="." node_paths=PackedStringArray("hit")]
script = ExtResource("8_4reme")
hit = NodePath("../OinkSound")

[node name="HealthEffects" type="Node2D" parent="."]
script = ExtResource("10_d8vsq")
hit = ExtResource("11_ct0dh")

[node name="Item Drops" type="Node2D" parent="."]
script = ExtResource("12_fwqqi")
item_name = "bacon"

[node name="DmgModulate" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0exnc")
}
speed_scale = 3.0

[node name="VisibleOnScreenEnabler2D" type="VisibleOnScreenEnabler2D" parent="."]
rect = Rect2(-300, -300, 600, 600)

[node name="Fall" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_oihn5")
}
autoplay = "fall"

[connection signal="navigation_finished" from="NavigationAgent2D" to="." method="_on_navigation_agent_2d_navigation_finished"]
[connection signal="interact" from="CollisionShape2D" to="." method="_on_collision_shape_2d_interact"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="MiscSoundTimer" to="." method="_on_misc_sound_timer_timeout"]
[connection signal="on_death" from="HealthManager" to="." method="_die"]
[connection signal="on_death" from="HealthManager" to="Item Drops" method="_drop"]
[connection signal="on_hit" from="HealthManager" to="." method="on_hit"]
[connection signal="on_hit" from="HealthManager" to="HealthSounds" method="on_hit"]
[connection signal="on_hit" from="HealthManager" to="HealthEffects" method="on_hit"]
